test/objects/bad/objects009.lat
class C {

}

int main() {
	C x = new C;
	C y = new C;
	x + y;
	return 0;
}
